--- a/drafts/rebench.html
+++ b/drafts/rebench.html
@@ -3,7 +3,7 @@
 <!-- <input type="button" onclick="run()" value="run()">   -->
 <!-- <input type="button" onclick="stop()" value="stop()"> -->
 <head>
-<script src='../dlib/Fdrandom.js'></script>
+<script src='../Fdrandom.js'></script>
 <script src='../dlib/floatpresc.js'></script>
 <script src='../dlib/mutil.js'></script>
 </head>
