--- a/drafts/rebench.html
+++ b/drafts/rebench.html
@@ -171,7 +171,7 @@ function runben() {
 	
 	var dur=3,reps=1
 	var funz= [
-	 [Math.random,"math.random "],
+	 //~ [Math.random,"math.random "],
 	 //~ [Fdrandom.f48,"f48 "],
 	 //~ [Fdrandom.f24,"f24 "],
 	 //~ [Fdrandom.fxs,"fxs "],
@@ -192,14 +192,15 @@ function runben() {
 	 //~ [Fdrandom.i32,"i32 "],
 	 //~ [Fdrandom.ilcg,"ilcg "],
 	 //~ [Fdrandom.ishr2,"ishr2 "],
-	 [Fdrandom.uigless,"uigless "],
-	 [Fdrandom.uigmore,"uigmore "],
-	 [Fdrandom.igbrist,"igbrist "],
-	 [Fdrandom.igmmode,"igmmode "],
+	 //~ [Fdrandom.uigless,"uigless "],
+	 //~ [Fdrandom.uigmore,"uigmore "],
+	 //~ [Fdrandom.igbrist,"igbrist "],
+	 //~ [Fdrandom.igmmode,"igmmode "],
 	 [Fdrandom.fgwedge,"fgwedge "],
-	 [Fdrandom.fgtrapez,"fgtrapez "],
+	 [Fdrandom.fgteat,"fgteat "],
+	 //~ [Fdrandom.fgtrapez,"fgtrapez "],
 	 [Fdrandom.fgthorn,"fgthorn "],
-	 [Fdrandom.fgskip,"fgskip"],
+	 //~ [Fdrandom.fgskip,"fgskip"],
 
 	]
 				
