--- a/drafts/rebench.html
+++ b/drafts/rebench.html
@@ -196,10 +196,10 @@ function runben() {
 	 //~ [Fdrandom.uigmore,"uigmore "],
 	 //~ [Fdrandom.igbrist,"igbrist "],
 	 //~ [Fdrandom.igmmode,"igmmode "],
-	 [Fdrandom.fgwedge,"fgwedge "],
+	 //~ [Fdrandom.fgwedge,"fgwedge "],
 	 [Fdrandom.fgteat,"fgteat "],
 	 //~ [Fdrandom.fgtrapez,"fgtrapez "],
-	 [Fdrandom.fgthorn,"fgthorn "],
+	 //~ [Fdrandom.fgthorn,"fgthorn "],
 	 //~ [Fdrandom.fgskip,"fgskip"],
 
 	]
