--- a/drafts/rebench.html
+++ b/drafts/rebench.html
@@ -176,8 +176,8 @@ function runben() {
 	 //~ [Fdrandom.f48,"f48 "],
 	 //~ [Fdrandom.f24,"f24 "],
 	 //~ [Fdrandom.fxs,"fxs "],
-	 [h.rndbit,"rndbit "],
-	 [h.rndsign,"rndsign "],
+	 //~ [h.rndbit,"rndbit "],
+	 //~ [h.rndsign,"rndsign "],
 	 //~ [Fdrandom.usum,"usum 1 ",1],
 	 //~ [Fdrandom.usum,"usum 2 ",2],
 	 //~ [Fdrandom.usum,"usum 3 ",3],
@@ -188,8 +188,8 @@ function runben() {
 	 //~ [Fdrandom.usum,"usum 8 ",8],
 	 //~ [Fdrandom.usum,"usum 16 ",16],
 	 //~ [Fdrandom.usum,"usum 32 ",32],
-	 //~ [Fdrandom.gaus,"gaus "],
-	 //~ [Fdrandom.gausx,"gausx "],
+	 [Fdrandom.gaus,"gaus "],
+	 [Fdrandom.gausx,"gausx "],
 	 //~ [Fdrandom.ui32,"ui32 "],
 	 //~ [Fdrandom.i32,"i32 "],
 	 //~ [Fdrandom.ilcg,"ilcg "],
