--- a/drafts/chartfn.html
+++ b/drafts/chartfn.html
@@ -65,7 +65,7 @@ function runben() {
 	 //~ [Fdrandom.usum,"usum 8 ",8],
 	 //~ [Fdrandom.usum,"usum 16 ",16],
 	 //~ [Fdrandom.usum,"usum 32 ",32],
-	 [Fdrandom.gaus,"gaus "],
+	 //~ [Fdrandom.gaus,"gaus "],
 	 //~ [Fdrandom.gausx,"gausx "],
 	 //~ [Fdrandom.ui32,"ui32 "],
 	 //~ [Fdrandom.i32,"i32 "],
@@ -75,12 +75,12 @@ function runben() {
 	 //~ [Fdrandom.uigmore,"uigmore "],
 	 //~ [Fdrandom.igbrist,"igbrist "],
 	 //~ [Fdrandom.igmmode,"igmmode "],
-	 [Fdrandom.fgthorn,"fgthorn "],
-	 [Fdrandom.fgwedge,"fgwedge "],
-	 [Fdrandom.fgnorm,"fgnorm "],
-	 [Fdrandom.fgteat,"fgteat "],
-	 [Fdrandom.fgtrapez,"fgtrapez "],
-	 [Fdrandom.fgskip,"fgskip "],
+	 [Fdrandom.gbowl,"gbowl "],
+	 [Fdrandom.gthorn,"gthorn "],
+	 //~ [Fdrandom.gnorm,"gnorm "],
+	 //~ [Fdrandom.gteat,"fgteat "],
+	 //~ [Fdrandom.gtrapez,"gtrapez "],
+	 //~ [Fdrandom.gskip,"gskip "],
 	 //~ [h.fgskip,"fgskip"],
 	 //~ [Fdrandom.fgskip,"fgskip"],
 
