--- a/drafts/chartfn.html
+++ b/drafts/chartfn.html
@@ -55,7 +55,8 @@ function runben() {
 	 [Math.random,"math.random "],
 	 //~ [Fdrandom.f48s,"f48s "],
 	 //~ [Fdrandom.f48,"f48 "],
-	 [Fdrandom.f48s,"f48s "],
+	 [Fdrandom.gbowl,"gbowl "],
+	 [Fdrandom.gmild,"gmild "],
 	 //~ [Fdrandom.f24,"f24 "],
 	 //~ [Fdrandom.fxs,"fxs "],
 	 [Fdrandom.dbl,"dbl "],
