--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <script src='javascripts/Fdrandom.js'></script>
-    <script src='javascripts/Foochart.js'></script>
+    <script src='javascripts/foochart.js'></script>
 		<style type="text/css">
 			td { padding:0 0.1em; }
 			svg { background: #ffffff; }
