--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/strainer/Fdrandom.js/zipball/master">Download ZIP</a></li>
           <li class="download"><a class="buttons" href="https://github.com/strainer/Fdrandom.js/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/strainer/Fdrandom.js">View On GitHub</a></li>
+          <li><a class="buttons github" href="https://github.com/strainer/Fdrandom.js">View&nbsp;On&nbsp;GitHub</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/strainer">strainer</a></p>
@@ -38,12 +38,12 @@
       </header>
       <section>
         <h2>
-<a id="distribution-graphs-and-benchmarks" class="anchor" href="#distribution-graphs-and-benchmarks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Benchmark and Graph 35 Random Functions</h2>
+<a id="distribution-graphs-and-benchmarks" class="anchor" href="#distribution-graphs-and-benchmarks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Performance and test charts</h2>
 
 
 <div id="dash" style="text-align:center; margin:0px auto; width:100%;">
   
-  <button onclick="gogo()">Run Charts</button> 
+  <button onclick="gogo()">Run 35 Charts</button> 
 
   <select id="selectedsize">
 		<option value="small">Small</option>
@@ -58,12 +58,16 @@
   <div id="floatfail" style="display:none;">&nbsp;warning:float compliancy check failed</div>
 </div>
 
-<div id="log"></div>
+<div id="log">
+<div style="width:811px; margin:0 auto;">
+<img src="images/chartexample.jpg" height="242" width="811" />
+</div>
+</div>
 
-
+<p>Legend: The leftward charts plot 50 thousand variates as 25 thousand 2D points, also a histogram of their distribution is superimposed. In the rightwise charts a <em>random walk</em> is drawn with 800 thousand points, each point is moved in x & y axis by 2 variates and a horizontal drift to traversing the chart 32 times on average. Blue dots mark the beginning and end of the walk. Min and max values out of 32 thousand samples and the average delta between sequential variates are printed on the righthand chart.</p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using custom theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
