--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </div>
 </div>
 
-<p>Legend: The leftward charts plot 50 thousand variates as 25 thousand 2D points, also a histogram of their distribution is superimposed. In the rightwise charts a <em>random walk</em> is drawn with 800 thousand points, each point is moved in x & y axis by 2 variates and a horizontal drift to traversing the chart 32 times on average. Blue dots mark the beginning and end of the walk. Min and max values out of 32 thousand samples and the average delta between sequential variates are printed on the righthand chart.</p>
+<p>Legend: The leftward charts plot 50 thousand variates as 25 thousand 2D points, also a histogram of their distribution is superimposed. In the rightwise charts a <em>random walk</em> is drawn with 800 thousand points, each point is moved in x & y axis by 2 variates and a horizontal drift to traverse the chart 32 times on average. Blue dots mark the beginning and end of the walk. Min and max values out of 32 thousand samples and the average delta between sequential variates are printed on the righthand chart.</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using custom theme</small></p>
