put back fdr in gh-pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <script src='https://raw.githubusercontent.com/strainer/Fdrandom.js/master/Fdrandom.js'></script>
+    <script src='Fdrandom.js'></script>
     <script src='javascripts/foochart.js'></script>
 		<style type="text/css">
 			td { padding:0 0.1em; }
