--- a/drafts/canvfn.html
+++ b/drafts/canvfn.html
@@ -3,7 +3,7 @@
 <!-- <input type="button" onclick="run()" value="run()">   -->
 <!-- <input type="button" onclick="stop()" value="stop()"> -->
 <head>
-<script src='../Fdrandom.js'></script>
+<script src='../Fdrandom.min.js'></script>
 <style type="text/css">
   body{ background-color: #dddddd; color:#111111; }
   td { padding:0 0.1em; }
@@ -43,24 +43,15 @@ if(!Fdrandom.checkfloat()){
 }
 
 
+var antip,antiq,rough
 
 var rcount=0
-var rar=new Array(1000000)
 
-for(var u=0;u<rar.length;u++){ rar[u]=u }
-var cc
+var returnAVal= function(A)
+{ rcount=rcount==999999?0:rcount+1; return A[rcount] }
 
-var fdd=Fdrandom.pot()
-fdd.antisort(rar)
-//~ for(var u=0;u<rar.length-1;u++){ rar[u]=rar[u]-rar[u+1] }
-
-var retarray= function()
-//~ { return rar[rcount=(rcount++)%(rcount.length)] }
-{ rcount=rcount==999999?0:rcount+1; return rar[rcount] }
-
-var retarray2= function()
-//~ { return rar[rcount=(rcount++)%(rcount.length)] }
-{ return rar[rcount]-rar[rcount=rcount==999999?0:rcount+1] }
+var returnADelt= function(A)
+{ return A[rcount]-A[rcount=rcount==999999?0:rcount+1] }
 
 var fnstats={}
 var firstrun=1
@@ -92,6 +83,10 @@ function gogo(){
 	ddtsz=3.5*svgz/256
 	bdtsz=5*svgz/256
   
+  antip=Fd.aindex(1000000)
+  rough=Fd.mixof(Fd.bulk( 50,function(){return Fd.irange(0,1000)} ),1000000)
+  antiq=Fd.antisort(rough,[])
+  
   var de = document.getElementById("log"); 
   de.outerHTML = ""; delete de
 
@@ -111,9 +106,7 @@ function chartfuncs() {
 	clearInterval(intervar)	
 	
 	var dur=3,reps=1
-	
-	
-	
+		
 	var funz= [
 	 //[function(){ return Fd.lrange(0.5,-10,10) },"visk "],
 	 [Math.random,"math.random "],
@@ -159,11 +152,16 @@ function chartfuncs() {
 	// [Fd.lrange,"lrange 0.25",0.25],
 	// [Fd.lrange,"lrange 0.10",0.10],
 	// [Fd.lrange,"lrange 0",0],
-   [retarray,"antisort index"],
-	 [retarray2,"antisort delta "],	 
+   [returnAVal,"flat aindex",antip],
+	 [returnADelt,"flat aindex delta ",antip],	 
+   [returnAVal,"rough source",rough],
+   [returnADelt,"rough delta",rough],
+   [returnAVal,"rough anitsorted",antiq],
+	 [returnADelt,"a-rough delta ",antiq],	 
 	]
  			
 	//~ funz= [ [Fdrandom.i32gx,"i32gx "] ]
+	if(runstep==10){  }
 	
 	chartf(reps=1, funz[runstep][0], dur=2.5, funz[runstep][1], funz[runstep++][2] ) 
   //
@@ -198,7 +196,7 @@ chartf = function(n,a,b,c,d){
 	rexx+= '</table>';
 	
 	cc.innerHTML +=rexx
-	
+
 	Fd.repot()
 	cc.appendChild(twodim_dist_canv(a,d))
 	cc.appendChild(fltline_cnv(c,a,d))
