--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div id="dash" style="text-align:center; margin:0px auto; width:100%;">
   
-  <button onclick="gogo()">Run 39 Charts</button> 
+  <button onclick="gogo()">Run 45 Charts</button> 
 
   <select id="selectedsize">
 		<option value="small">Small</option>
@@ -65,7 +65,7 @@
 </div>
 </div>
 
-<p>Legend: The leftward charts plot 50 thousand variates as 25 thousand 2D points, also a histogram of their distribution is superimposed. In the rightwise charts a <em>random walk</em> is drawn with 800k points, each point is moved in x & y axis by 2 variates and a horizontal drift to traverse the chart 32 times on average. Red dots mark the beginning and end of the walk. Min and max values out of 32k samples and the average delta between sequential variates are printed on the righthand chart.<br><br> These features are arranged to examine the distributions and spot some potential bias or patterns in outputs. The chart of 'ishr2' reveals patterning which was not detected by 'diehard battery' tests. The function 'gskip' has special 2d distribution but appears to be unbiased</p>
+<p>Legend: The leftward charts plot 50 thousand variates as 25 thousand 2D points, also a histogram of their distribution is superimposed. In the rightwise charts a <em>random walk</em> is drawn with 800k points, each point is moved in x & y axis by 2 variates and a horizontal drift to traverse the chart 32 times on average. Red dots mark the beginning and end of the walk. Min and max values out of 32k samples and the average delta between sequential variates are printed on the righthand chart.<br><br> These features are arranged to examine the distributions and spot some potential bias or patterns in outputs. The chart of 'ishr2' reveals patterning which was not detected by 'diehard battery' tests. The function 'gskip' has special 2d distribution but appears to be unbiased. <br><br> The Final 6 charts the examine the result of the antisorting shuffle on flat and sparse distributions.</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using custom theme</small></p>
